<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp"
    android:paddingHorizontal="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/hp"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hp_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="0"
        android:textColor="@color/md_grey_200"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar_hp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:scaleY="3"
        app:indicatorColor="@color/md_green_200"
        app:trackColor="@color/md_grey_600"
        app:layout_constraintTop_toTopOf="@id/tv_hp"
        app:layout_constraintBottom_toBottomOf="@id/tv_hp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/attack"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_attack_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="0"
        android:textColor="@color/md_grey_200"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_hp"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:scaleY="3"
        app:indicatorColor="@color/md_yellow_200"
        app:trackColor="@color/md_grey_600"
        app:layout_constraintTop_toTopOf="@id/tv_attack"
        app:layout_constraintBottom_toBottomOf="@id/tv_attack"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/defense"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_attack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_defense_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="0"
        android:textColor="@color/md_grey_200"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_attack"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:scaleY="3"
        app:indicatorColor="@color/md_yellow_900"
        app:trackColor="@color/md_grey_600"
        app:layout_constraintTop_toTopOf="@id/tv_defense"
        app:layout_constraintBottom_toBottomOf="@id/tv_defense"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sp_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/sp_atk"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_defense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sp_attack_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="0"
        android:textColor="@color/md_grey_200"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_defense"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar_sp_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:scaleY="3"
        app:indicatorColor="@color/md_blue_200"
        app:trackColor="@color/md_grey_600"
        app:layout_constraintTop_toTopOf="@id/tv_sp_attack"
        app:layout_constraintBottom_toBottomOf="@id/tv_sp_attack"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sp_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/sp_def"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sp_attack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sp_defense_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="0"
        android:textColor="@color/md_grey_200"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_sp_attack"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar_sp_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:scaleY="3"
        app:indicatorColor="@color/md_blue_500"
        app:trackColor="@color/md_grey_600"
        app:layout_constraintTop_toTopOf="@id/tv_sp_defense"
        app:layout_constraintBottom_toBottomOf="@id/tv_sp_defense"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/speed"
        android:textColor="@color/md_white_1000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sp_defense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_speed_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="0"
        android:textColor="@color/md_grey_200"
        android:textSize="16sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_sp_defense"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/bar_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:scaleY="3"
        app:indicatorColor="@color/md_purple_A100"
        app:trackColor="@color/md_grey_600"
        app:layout_constraintTop_toTopOf="@id/tv_speed"
        app:layout_constraintBottom_toBottomOf="@id/tv_speed"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.325" />

</androidx.constraintlayout.widget.ConstraintLayout>