<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PokemonDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:paddingTop="24dp"
            app:navigationIcon="@drawable/ic_baseline_arrow_back">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pokeball"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitCenter"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_pokeball"
                android:visibility="gone"
                android:tooltipText="@string/tap_pokeball"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <View
                android:id="@+id/bg_poster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bottom_rounded_corners"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pokemon_poster"
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/type_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:chipSpacingHorizontal="8dp"
                app:layout_constraintTop_toBottomOf="@id/pokemon_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/tab_container"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/type_chip_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/select"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@drawable/custom_select"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tab1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/stats"
                            android:textColor="@color/md_white_1000"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tab2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/details"
                            android:textColor="@color/md_grey_600"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tab3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/moves"
                            android:textColor="@color/md_grey_600"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </FrameLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="48dp"
                android:layout_marginHorizontal="16dp"
                android:visibility="visible"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/tab_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <include
                    android:id="@+id/stats_container"
                    layout="@layout/content_stats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="48dp"
                android:layout_marginHorizontal="16dp"
                android:visibility="gone"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/tab_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/details_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="16dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/species_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:chipSpacingHorizontal="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/md_grey_200"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/species_chip_group"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_height"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/height"
                        android:textColor="@color/md_white_1000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingVertical="4dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_about"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_height_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="0"
                        android:textColor="@color/md_grey_200"
                        android:textSize="16sp"
                        android:paddingVertical="4dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_about"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_weight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/weight"
                        android:textColor="@color/md_white_1000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingVertical="4dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_height"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_weight_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="0"
                        android:textColor="@color/md_grey_200"
                        android:textSize="16sp"
                        android:paddingVertical="4dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_height"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_ability"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/abilities"
                        android:textColor="@color/md_white_1000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingVertical="4dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_weight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_ability_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_grey_200"
                        android:textSize="16sp"
                        android:paddingVertical="4dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_weight"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_moves"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="48dp"
                android:layout_marginHorizontal="16dp"
                android:visibility="gone"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/tab_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/moves_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="12dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_moves"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pokemon_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>